fixed 'no' spacing

--- a/src/pages/questions/questions.scss
+++ b/src/pages/questions/questions.scss
@@ -142,8 +142,9 @@ $input-border:#dcdcdc;
             display: flex;
             flex-direction: column;
 
-            #no-who-input {
-                padding: 15px;
+            #no-when-input {
+                height: 40px;
+                // padding: 15px;
             }
         }
 
@@ -151,7 +152,7 @@ $input-border:#dcdcdc;
     }
 
     .what {
-        margin-top: 70px;
+        margin-top: 10px;
     }
 
     .reason {
